# ScreenRec

./: .gitignore  README.md  com.github.dr_styki.screenrec.yml  meson.build
data/: com.github.dr-Styki.ScreenRec.appdata.xml.in  com.github.dr-Styki.ScreenRec.desktop.in  com.github.dr-Styki.ScreenRec.gresource.xml  com.github.dr-Styki.ScreenRec.gschema.xml  com.github.dr-styki.screenrec.appdata.xml.in  com.github.dr-styki.screenrec.desktop.in  com.github.dr-styki.screenrec.gresource.xml  com.github.dr-styki.screenrec.gschema.xml  com.github.dr_styki.screenrec.appdata.xml.in  com.github.dr_styki.screenrec.desktop.in  com.github.dr_styki.screenrec.gresource.xml  com.github.dr_styki.screenrec.gschema.xml  meson.build  stylesheet.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.dr-Styki.ScreenRec.pot  com.github.dr-styki.screenrec.pot  com.github.dr_styki.screenrec.pot  es.po  fr.mo  fr.po  it.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  tr.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  it.po  nl.po  pt.po  pt_BR.po  ro.po
src/: Application.vala  FFmpegWrapper.vala  MainWindow.vala  SaveDialog.vala  ScreenrecorderWindow.vala  meson.build
src/Dialogs/: Countdown.vala  ProgressDialog.vala  SaveDialog.vala
src/Tools/: KeybindingManager.vala  PulseAudioManager.vala  Recorder.vala  SendNotification.vala
src/Views/: RecordView.vala  SettingsView.vala
src/Widgets/: Countdown.vala  FormatComboBox.vala  SaveDialog.vala  ScaleComboBox.vala  SelectionArea.vala  VideoPlayer.vala
