sources = files (
    'Dialogs/Countdown.vala',
    'Dialogs/SaveDialog.vala',

    'Tools/SendNotification.vala',
    'Tools/Recorder.vala',

    'Views/RecordView.vala',
    'Views/SettingsView.vala',

    'Widgets/SelectionArea.vala',
    'Widgets/VideoPlayer.vala',

    'Application.vala',
    'ScreenrecorderWindow.vala'
)
