sources = files (
    'Dialogs/Countdown.vala',
    'Dialogs/SaveDialog.vala',

    'Tools/KeybindingManager.vala',
    'Tools/Recorder.vala',
    'Tools/SendNotification.vala',

    'Views/RecordView.vala',
    'Views/SettingsView.vala',

    'Widgets/SelectionArea.vala',
    'Widgets/VideoPlayer.vala',

    'Application.vala',
    'ScreenrecorderWindow.vala'
)
